card reason w content

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -150,11 +150,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  Servizio su misura.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>Valutiamo qual'è la migliore soluzione ristorativa in base al tuo budget e al tuo spazio. Facile da installare le nostre soluzioni non necessitano grande spazio. Da qualche metri quadrati per installare un frigo a una stanza se vuoi un servizio con il nostro personale decicato. Possiamo disegnare un progetto piu integrato con il nostro team di designer. E ricordati, consegnamo piatti pronti monoporzione: nessun odore!</p>
           </div>
         </div>
       </div>
@@ -163,11 +163,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  You'll improve the health of your team.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>Eating right keeps us healthy. A healthy team leads to less missed work, better quality work, fewer doctor visits, and lower health care costs.</p>
           </div>
         </div>
       </div>
@@ -176,11 +176,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  You'll boost afternoon energy levels.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>When your team eats greasy pizza for lunch, they hit a wall at 3pm. Our fresh and nutrient-rich lunches give your employees the focus and stamina they need to finish the day strong.</p>
           </div>
         </div>
       </div>
@@ -189,11 +189,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  You’ll save time by simplifying lunch logistics.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>Choosing a restaurant, ordering lunch, and picking it up is a huge waste of resources. We return that time to your team.</p>
           </div>
         </div>
       </div>
@@ -202,11 +202,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  You’ll find it easier to attract and keep top talent.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>The best and brightest people flock to the best workplaces. By offering a forward-thinking benefit like LunchOwl, you make it crystal clear to prospective employees that you value and invest in your people.</p>
           </div>
         </div>
       </div>
@@ -215,11 +215,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  You’ll make it easier for friendships to form.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>Having friends at works makes us happier and more likely to stay. It’s easy to connect and get to know each other over lunch when it’s delivered.</p>
           </div>
         </div>
       </div>
@@ -246,17 +246,17 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
 
     <h3>Come aiutiamo i dipendenti</h3>
     <!--Business-cards-reason row-->
-    <div class="row business-cards-reason cards-reason d-flex">
+    <div class="row cards-reason d-flex">
 
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  You'll have an authentic experience.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>Every week our team of Chef together with the nutritionist propose a new menu. Creative, balanced, fresh and healthy, we want our dishes to be tasty. We offer different range of dishes (Super proteic, meat focused, fish focused, vegan..) and try to make your team discover new flavors from all over the world without forgetting the very local ones.</p>
           </div>
         </div>
       </div>
@@ -265,11 +265,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  You’ll know what you eat.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>Single serving lunch with all the details you have always wanted to know about your food: calories, protein, glucida, allergenic...</p>
           </div>
         </div>
       </div>
@@ -278,11 +278,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  Eat when you want, where you want.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>Your food in it’s elegant and compostable packaging (sometime only recyclable but we work on it) is always ready to be eaten. Perfectly protected and uncontaminated you can take it wherever you want with your colleagues and enjoy it when you want: in the lunch space, at your desk, in your meeting room or in the park nearby ! It’s up to you.</p>
           </div>
         </div>
       </div>
@@ -291,11 +291,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  Sweet prices for sweet employees.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>We propose special prices for companies in order to make healthy food accessible for all. You will have an automatic discount on our street price list. Together with your company we study the best solution for you and allow the company to contribute up to 100% of you lunch !</p>
           </div>
         </div>
       </div>
@@ -304,11 +304,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  Manage your special meeting.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>We are willing to prepare special dishes for your special occasion such as executive meeting, department meeting or client meeting. With just a few days in advance we can delight your guests.</p>
           </div>
         </div>
       </div>
@@ -317,11 +317,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Migliorerete la salute dei vostri dipendenti
+                  <i class="fas fa-carrot icon-color"></i>  You’ll make it easier for friendships to form.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Chef e nutrizionisti creano ogni settimana un nuovo menu. Stagionalità e qualità degli ingredienti guidano le nostre scelte.</p>
+            <p>Having friends at works makes us happier and more likely to stay. It’s easy to connect and get to know each other over lunch when it’s delivered.</p>
           </div>
         </div>
       </div>
