--- a/source/stylesheets/components/_card_reason.scss
+++ b/source/stylesheets/components/_card_reason.scss
@@ -38,6 +38,7 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 18px;
 }
 
