better content index

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -127,7 +127,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       </div>
 
       <div class="content-presentation-text">
-        <p class="font-weight-light">Abbiamo pensato a tutto ma soppratutto abbiamo pensato a Voi, ai vostri collaboratori. Non consequat et enim ea laborum laboris aliquip in culpa nisi nulla fugiat non irure irure magna id eiusmod nostrud in anim qui cupidatat. Ea reprehenderit id dolore incididunt sunt sed dolor ut deserunt eu irure ut pariatur irure reprehenderit esse in minim.
+        <p class="font-weight-light mb-4">Abbiamo pensato a tutto ma soppratutto abbiamo pensato a Voi, ai vostri collaboratori. Abbiamo pensato che tutti dovrebbero potere avere accesso a dei piatti freschi, buoni e sani. Abbiamo quindi pensato a scegliere i migliori fornitori per avere un materia prima di qualità, e poi di elaborare dei menu vareggiati ed equilibrati ogni settimana. E abbiamo deciso di preparali e di confezionarli in porzione individuale con packaging compostabile in modo che possano essere etichettati riportando tutte le loro caratteristiche: ingredienti, allergeni e valori nutrizionali...Ma sopratutto che possano essere assaporati per rendere la giornata di lavoro più bella e proficua!
         </p>
       </div>
       <div>
@@ -143,6 +143,9 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
   <div class="container text-center padding-top-bottom" id="marbo-60">
 
     <h3>Come aiutiamo le aziende</h3>
+    <div class="content-presentation-text-title">
+      <p><strong>Con Assaporami, potete offrire un servizio di ristorazione on-site ai vostri collaboratori. Qualsiasi sia la dimensione della vostra azienda abbiamo la soluzione piu adatta. Da 25 collaboratori a vari centinaia di dipendenti, vi possiamo aiutare ad offrire la migliore pausa pranzo ai vostri dipendenti.</strong></p>
+    </div>
     <!--Cards-reason row-->
     <div class="row cards-reason d-flex">
 
@@ -150,11 +153,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Servizio su misura.
+                  <i class="fas fa-carrot icon-color"></i>  Servizio su misura e attivazione veloce.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Valutiamo qual'è la migliore soluzione ristorativa in base al tuo budget e al tuo spazio. Facile da installare le nostre soluzioni non necessitano grande spazio. Da qualche metri quadrati per installare un frigo a una stanza se vuoi un servizio con il nostro personale decicato. Possiamo disegnare un progetto piu integrato con il nostro team di designer. E ricordati, consegnamo piatti pronti monoporzione: nessun odore!</p>
+            <p>Valutiamo la migliore soluzione ristorativa in base al tuo budget e al tuo spazio. Facile da installare le nostre soluzioni non necessitano grande spazio. Da qualche m2 per un frigo fino ad una stanza per un servizio con il nostro personale decicato.</p>
           </div>
         </div>
       </div>
@@ -163,11 +166,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  You'll improve the health of your team.
+                  <i class="fas fa-carrot icon-color"></i>  Migliorate la salute dei vostri dipendenti.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Eating right keeps us healthy. A healthy team leads to less missed work, better quality work, fewer doctor visits, and lower health care costs.</p>
+            <p>Mangiare bene ci mantiene in forma. Un team in salute permette di ridurre il numero di visite mediche, le assenze e il lavoro incompiuto. Mentre contribuisce ad aumentare la qualità del lavoro. </p>
           </div>
         </div>
       </div>
@@ -176,11 +179,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  You'll boost afternoon energy levels.
+                  <i class="fas fa-carrot icon-color"></i>  Aumentate il livello di energia pomeridiana.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>When your team eats greasy pizza for lunch, they hit a wall at 3pm. Our fresh and nutrient-rich lunches give your employees the focus and stamina they need to finish the day strong.</p>
+            <p>Un cibo troppo pesante ha effetti negativi sulla produttivita del team nella fascia pomeridiana. I nostri piatti freschi accuratamente studiati forniscono i nutrimenti necessari per aumentare concentrazione e resistenza fisica per il resto della giornata.</p>
           </div>
         </div>
       </div>
@@ -189,11 +192,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  You’ll save time by simplifying lunch logistics.
+                  <i class="fas fa-carrot icon-color"></i>  Risparmete tempo semplificando la logisica della pausa pranzo.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Choosing a restaurant, ordering lunch, and picking it up is a huge waste of resources. We return that time to your team.</p>
+            <p>Scegliere un ristorante, ordinare i pasti, reccarsi sul posto, fare la fila...Una perdita di tempo notevole che invece viene restituito al vostro team.</p>
           </div>
         </div>
       </div>
@@ -202,11 +205,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  You’ll find it easier to attract and keep top talent.
+                  <i class="fas fa-carrot icon-color"></i>  Trattenete e reclutate piu facilmente i migliori talenti.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>The best and brightest people flock to the best workplaces. By offering a forward-thinking benefit like LunchOwl, you make it crystal clear to prospective employees that you value and invest in your people.</p>
+            <p>I migliori i piu brillant collaboratori sono attrati dai migliori posti di lavoro. Offrendo i piatti Assaporamo con cibo fresco, buono e sanno ai vostri dipendenti, manderete un messaggio chiaro sul tipo di valore e di investimenti che fate nelle personne nella vostra azienda.</p>
           </div>
         </div>
       </div>
@@ -215,11 +218,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  You’ll make it easier for friendships to form.
+                  <i class="fas fa-carrot icon-color"></i> Contribuite a creare le relazioni sociali in azienda.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Having friends at works makes us happier and more likely to stay. It’s easy to connect and get to know each other over lunch when it’s delivered.</p>
+            <p>Avere degli amici in azienda, ci rende piu felice e piu propenso a rimanere. E piu facile interagire e conoscere i propri collaboratori quando il cibo vien consegnato.</p>
           </div>
         </div>
       </div>
@@ -252,11 +255,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  You'll have an authentic experience.
+                  <i class="fas fa-carrot icon-color"></i>  Fresco. Buono. Sano.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Every week our team of Chef together with the nutritionist propose a new menu. Creative, balanced, fresh and healthy, we want our dishes to be tasty. We offer different range of dishes (Super proteic, meat focused, fish focused, vegan..) and try to make your team discover new flavors from all over the world without forgetting the very local ones.</p>
+            <p>Ogni settimana, chef e nutrizionisti vi preparano un menu diverso con piatti creativi, bilanciati e sani. Selezioniamo con cura i migliori e piu freschi ingredienti. Consegnamo ogni giorno dei piatti freschi.</p>
           </div>
         </div>
       </div>
@@ -265,11 +268,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  You’ll know what you eat.
+                  <i class="fas fa-carrot icon-color"></i>  Un esperienza culinare autentica.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Single serving lunch with all the details you have always wanted to know about your food: calories, protein, glucida, allergenic...</p>
+            <p>Offriamo un'ampia gamma di piatti per rispondere a tutti i gusti e stile di vita: super proteici, vegetariani, vegani, senza glutine..e cerchiamo di farti scoprire sapori del mondo senza dimenticare i piatti piu locali.</p>
           </div>
         </div>
       </div>
@@ -278,11 +281,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Eat when you want, where you want.
+                  <i class="fas fa-carrot icon-color"></i>  Una totale trasparenza: Sai cosa mangi.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Your food in it’s elegant and compostable packaging (sometime only recyclable but we work on it) is always ready to be eaten. Perfectly protected and uncontaminated you can take it wherever you want with your colleagues and enjoy it when you want: in the lunch space, at your desk, in your meeting room or in the park nearby ! It’s up to you.</p>
+            <p>I piatti, serviti in mono-porzione e protetti, sono tutti etichetatti. Riportano tutto ciò che hai sempre voluto sapere: Ingredienti, calorie, apporto nutrizionale, allergeni...</p>
           </div>
         </div>
       </div>
@@ -291,11 +294,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Sweet prices for sweet employees.
+                  <i class="fas fa-carrot icon-color"></i>  Mangia quando vuoi, dove vuoi.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>We propose special prices for companies in order to make healthy food accessible for all. You will have an automatic discount on our street price list. Together with your company we study the best solution for you and allow the company to contribute up to 100% of you lunch !</p>
+            <p>Il tuo piatto servito in una scatola compostibile è sempre pronto ad essere degustato. Sigilito e protetto, lo puoi prendere quando vuoi/puoi e portalo dove preferisci: Sala pranzo, scrivania, sala riunione..o anche al parco! Decidi tu !</p>
           </div>
         </div>
       </div>
@@ -304,11 +307,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  Manage your special meeting.
+                  <i class="fas fa-carrot icon-color"></i>  Prezzi dolci per dipendenti in salute.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>We are willing to prepare special dishes for your special occasion such as executive meeting, department meeting or client meeting. With just a few days in advance we can delight your guests.</p>
+            <p>Proponiano prezzi scontati per le aziende con l'intento di rendere il cibo sano accessibile a tutti. Assieme alla tua azienda studiamo la migliore soluzione perche possa contribuire fino all 100% del costo del tuo pasto !</p>
           </div>
         </div>
       </div>
@@ -317,11 +320,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
                 <h4 class="text-center">
-                  <i class="fas fa-carrot icon-color"></i>  You’ll make it easier for friendships to form.
+                  <i class="fas fa-carrot icon-color"></i>  Gestisci al meglio le tue riunioni importanti.
                 </h4>
           </div>
           <div class="card-reason-back">
-            <p>Having friends at works makes us happier and more likely to stay. It’s easy to connect and get to know each other over lunch when it’s delivered.</p>
+            <p>Siamo in grado di preparare dei piatti ad-hoc per le tue occasioni speciali: riunione del board, riunioni del tuo reparto, riunioni clienti. Basta che ci informi con qualche giorni di anticipo e saremo felici di deliziare i tuoi ospiti.</p>
           </div>
         </div>
       </div>
