--- a/source/layouts/_footer_top.html.erb
+++ b/source/layouts/_footer_top.html.erb
@@ -6,7 +6,7 @@
         <div class="row d-flex">
           <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left">
             <h5>ABOUT</h5>
-            <p>Assaporami propone servizi di ristorazione su misura per le aziende: Food delivery personalizzato, corner in-house (con o senza personale) & exclusive meeting lunch. Solo cibo gustoso, sano e fresco.</p>
+            <p>Assaporami propone servizi di ristorazione su misura per le aziende: Food delivery personalizzato, corner in-house (con o senza personale) & exclusive meeting lunch. Solo cibo fresco, buono e sano.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 col-xl-3 text-left">
             <h5>ASSAPORAMI</h5>
