gallery on the go

--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -8,4 +8,5 @@
 @import "cards_editorial";
 @import "horizontal_simple_form";
 @import "simple_form_button";
-@import "card_reason"
+@import "card_reason";
+@import "gallery"
