--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -345,4 +345,41 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
 </div>
 <!--.Banner bg-white-->
 
+<!--Banner bg-light-gray-->
+<div class="banner bg-light-gray">
+  <div class="container text-center padding-top-bottom d-flex" id="marbo-60">
+
+    <div class="row">
+      <div class="col-12 col-md-6 col-lg-6">
+        <h3>Dei piatti per tutti i gusti</h3>
+        <p>Lorem ipsum mollit sunt veniam ea dolor et magna magna est duis deserunt elit qui aute ut voluptate ex occaecat pariatur anim. Ex dolor commodo veniam non non commodo labore ad excepteur ea elit nisi ut exercitation duis ad mollit irure quis exercitation anim veniam nulla dolor quis irure voluptate ut in culpa consequat quis deserunt amet ea ullamco.</p>
+      </div>
+      <div class="col-12 col-md-6 col-lg-6">
+        <div class=”gallery”>
+          <figure class="gallery__item gallery__item--1">
+            <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573576622/Assaporami/Index/houmous.jpg", :class => "gallery__img" %>
+          </figure>
+          <figure class="gallery__item gallery__item--2">
+            <img src="https://res.cloudinary.com/orexibus/image/upload/v1573576075/Assaporami/Index/zuppa_faggioli.jpg" class="gallery__img" alt="Image 2">
+          </figure>
+          <figure class="gallery__item gallery__item--3">
+            <img src="https://res.cloudinary.com/orexibus/image/upload/v1573576349/Assaporami/Index/pollo_curry.jpg" class="gallery__img" alt="Image 3">
+          </figure>
+          <figure class="gallery__item gallery__item--4">
+            <img src="https://res.cloudinary.com/orexibus/image/upload/v1573576235/Assaporami/Index/bowl_veggie.jpg" class="gallery__img" alt="Image 4">
+          </figure>
+          <figure class="gallery__item gallery__item--5">
+            <img src="https://res.cloudinary.com/orexibus/image/upload/v1573576447/Assaporami/Index/rosbeef.jpg" class="gallery__img" alt="Image 5">
+          </figure>
+          <figure class="gallery__item gallery__item--6">
+            <img src="https://res.cloudinary.com/orexibus/image/upload/v1573575852/Assaporami/Index/dolce_agrumi.jpg" class="gallery__img" alt="Image 6">
+          </figure>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+<!--.Banner bg-light-gray-->
 
