banner gamme index + cibo page

--- a/source/cibo.html.erb
+++ b/source/cibo.html.erb
@@ -1,12 +1,12 @@
 ---
-title: Assaporami - Servizi per mangiare meglio in azienda
+title: Assaporami - Cibo
 ---
 
 <div class="banner banner-white bg-white">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Assaporami on-demand</h2>
-      <p>Il pranzo aziendale consegnato in ufficio. Dei piatti saporiti, sani, freschi e bilanciati. Fate beneficiare i vostri dipendenti di prezzi piu dolci. Prendete a carico una parte del pranzo e ricevete una fattura a fine mese: un'astuta soluzione alternativa ai ticket restaurant. Un dash board completo per gestire il vosto account e monitorare le vostre spese.
+      <h2 class="h2-responsive">Catena di fornitura</h2>
+      <p>Assaporami opera creando rapporti di stretta collaborazione con i propri fornitori, stimolandoli ad intraprendere insieme percorsi di miglioramento che consentano performance più durature nel tempo, in un’ottica di reciproca crescita e di creazione di valore condiviso. I nostri fornitori vengono valutati secondo dei criteri trasparenti: capacità tecnico/ produttiva relativamente al prodotto/servizio richiesti; affidabilità; qualità del servizio /prodotto; rapporto qualità/prezzo; tempi di evasione ordine; certificazioni di prodotto e/o sistema.
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
@@ -21,7 +21,7 @@ title: Assaporami - Servizi per mangiare meglio in azienda
       <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108856/sito/Servizi/2.organizzazioneeventi_qqfcfk.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Assaporami Corner</h2>
+      <h2 class="h2-responsive">La gamma dei piatti</h2>
       <p>Assaporami presso i vostri uffici. La soluzione è modulabile secondo le vostre esigenze (pranzo e collazione o solo pranzo) e integrata al vostro arredamento. Lo spazio comprende dei moduli refregerati e un banco per il nostro personale. Una soluzione economica, facile da integrare e pulita.</p>
     </div>
   </div>
@@ -30,8 +30,8 @@ title: Assaporami - Servizi per mangiare meglio in azienda
 <div class="banner banner-white bg-white">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Fresh wall</h2>
-      <p>Soluzione versatile, richiede pochissimo spazio. Aperta per l'ora di pranzo. Una soluzione in libero accesso che offre piatti freschi e gustosi in una vetrina refrigerata per un ottima conservazione.
+      <h2 class="h2-responsive">Trasparenza</h2>
+      <p>Finalmente potete sapere cosa mangiate. Assaporami indica sulle etichette dei suoi piatti tutti gli ingredienti usati per la loro preparazione ma anche il loro apporto energetico e nutritivo. Siete voi a decidere cosa assaporire.
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
@@ -46,8 +46,8 @@ title: Assaporami - Servizi per mangiare meglio in azienda
       <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108911/sito/Servizi/4.scouting_wfy4fv.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Exclusive lunch bag</h2>
-      <p>Ricette esclusive per le vostre riunioni piu importanti. 3 gamme di prodotti disponibili: carne, pesce, vegetariano. Passate l'ordine entro due settimane dal vostro special lunch !</p>
+      <h2 class="h2-responsive">Porzionato e protetto</h2>
+      <p>Fin dall'inizio abbiamo deciso di propore dei piatti bilanciati mono-porzione imballati. Questa scelta permette ai clienti di assicurarsi l'integrita igenica dei piatti prodotti in atmosfera protetta e la possibilita di indicare tutte le informazioni relative al piatto che sta per essere assaporato. Questa soluzione offre una grande flessibilità ai dipendenti che possono scegliere quando e dove assaporare il loro piatto preferito.</p>
     </div>
   </div>
 </div>
@@ -55,8 +55,8 @@ title: Assaporami - Servizi per mangiare meglio in azienda
 <div class="banner banner-white bg-white">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Power staff meeting</h2>
-      <p>L'abbonamento per le vostre riunioni settimanali: La bonta in riunione. Una soluzione unica pensata per i vostri collaboratori.
+      <h2 class="h2-responsive">Sostenibilità ambientale</h2>
+      <p>Migliorare la qualità della vità dei nostri clienti è una priorità quotidiana ma non si limita ai soli piatti sani serviti. Lavoriamo per ridurre il consumo energetico attraverso l'ottimizzazione dei percorsi di approviggionamento privileggiando le filiere corti e i prodotti di staggione, utilizziamo solo ed esclusivamente imballaggi facilemente biodegradabili e riutilizzabili. Pensiamo al vostro futuro.
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
@@ -71,24 +71,13 @@ title: Assaporami - Servizi per mangiare meglio in azienda
       <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561367311/sito/Carousel/6.showroom_wfyeh5.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Assaporami Event</h2>
-      <p>Assieme a voi organizziamo eventi privilegiati per i vostri collaboratori: team-building, break-fast meeting, interventi eco-responsabili, presentazione ricette...
+      <h2 class="h2-responsive">Etica</h2>
+      <p>Assaporami si impegna a promuovere, sostenere e realizzare un modello aziendale che mette al centro non solo gli interessi dell’impresa, ma anche quelli di tutti coloro che lavorano con lei ogni giorno andando continuamente alla ricerca di quelle dosi di sostenibilità ambientale, responsabilità sociale, sobrietà e senso del giusto che possono contribuire a creare valore, rispettando le persone.
       </p>
     </div>
   </div>
 </div>
 
-<div class="banner banner-white bg-white">
-  <div class="row align-items-center">
-    <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Assaporami Catering</h2>
-      <p>Organizziamo colazioni di benvenuto, coffee break, pranzi, cocktail e cene per i vostri eventi aziendali. Stupite i vostri ospiti con dei menu su misura ed un servizio impeccabile.
-      </p>
-    </div>
-    <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573666049/Assaporami/Index/catering.jpg", id: "img-services" %>
-    </div>
-  </div>
-</div>
+
 
 
