--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -15,7 +15,7 @@ title: Assaporami Business - Contatti
             Assaporami <br>
             Via Mac Mahon, 46 <br>
             20155 Milano - IT <br>
-            Tel. +39 +390236704143 <br>
+            Tel. +39 0236704143 <br>
             info@assaporami.it <br>
           </p>
         </div>
