--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -233,7 +233,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
     <div class="row justify-content-center mt-4">
       <div class="col-10 col-md-8 col-lg-10">
         <div class="card-business-green">
-        <p class="mb-0">SEI IL TITOLARE / RESPONSABILE DELL' AZIENDA ?&nbsp;&nbsp;<%= link_to "CONTATTACI", "/contact.html", class: "btn btn-simple-contact" %> </p>
+        <p class="mb-0">SEI IL TITOLARE / RESPONSABILE DELL' AZIENDA ?&nbsp;&nbsp;<%= link_to "CONTATTACI", "/contact.html#first_name", class: "btn btn-simple-contact" %> </p>
         </div>
       </div>
     </div>
@@ -349,32 +349,15 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
 <div class="banner bg-light-gray">
   <div class="container text-center padding-top-bottom d-flex" id="marbo-60">
 
-    <div class="row">
+    <div class="row align-items-center">
       <div class="col-12 col-md-6 col-lg-6">
-        <h3>Dei piatti per tutti i gusti</h3>
-        <p>Lorem ipsum mollit sunt veniam ea dolor et magna magna est duis deserunt elit qui aute ut voluptate ex occaecat pariatur anim. Ex dolor commodo veniam non non commodo labore ad excepteur ea elit nisi ut exercitation duis ad mollit irure quis exercitation anim veniam nulla dolor quis irure voluptate ut in culpa consequat quis deserunt amet ea ullamco.</p>
+        <h3 class="mb-3">Dei piatti per tutti i stili di vita</h3>
+        <div>
+          <p class="mb-0">In Assaporami, siamo molto attenti al benessere. Per questo motivo proponiamo dei piatti freschi, buoni e sani. Siamo anche molto attenti al rispetto delle persone, alle loro convinzioni e ai loro modo di alimentarsi. I nostri chef propongono un ampia gamma di piatti che permette di rispondere a queste aspettative: Piatti per sportivi, vegani, vegetariani, piatti senza glutine, o senza maiale. Le etichette, e le informazioni sul nostro sito, vi permettono di sapere quali ingredienti sono stati usati per la loro preparazione, se ci sono degli allergeni particolari, quanti calorie comporta un piatto o ancora che tipo di nutrimenti contengono. In poche parole, pensiamo a voi. A tutti voi.</p>
+        </div>
       </div>
       <div class="col-12 col-md-6 col-lg-6">
-        <div class=”gallery”>
-          <figure class="gallery__item gallery__item--1">
-            <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573576622/Assaporami/Index/houmous.jpg", :class => "gallery__img" %>
-          </figure>
-          <figure class="gallery__item gallery__item--2">
-            <img src="https://res.cloudinary.com/orexibus/image/upload/v1573576075/Assaporami/Index/zuppa_faggioli.jpg" class="gallery__img" alt="Image 2">
-          </figure>
-          <figure class="gallery__item gallery__item--3">
-            <img src="https://res.cloudinary.com/orexibus/image/upload/v1573576349/Assaporami/Index/pollo_curry.jpg" class="gallery__img" alt="Image 3">
-          </figure>
-          <figure class="gallery__item gallery__item--4">
-            <img src="https://res.cloudinary.com/orexibus/image/upload/v1573576235/Assaporami/Index/bowl_veggie.jpg" class="gallery__img" alt="Image 4">
-          </figure>
-          <figure class="gallery__item gallery__item--5">
-            <img src="https://res.cloudinary.com/orexibus/image/upload/v1573576447/Assaporami/Index/rosbeef.jpg" class="gallery__img" alt="Image 5">
-          </figure>
-          <figure class="gallery__item gallery__item--6">
-            <img src="https://res.cloudinary.com/orexibus/image/upload/v1573575852/Assaporami/Index/dolce_agrumi.jpg" class="gallery__img" alt="Image 6">
-          </figure>
-        </div>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573643728/Assaporami/Index/gallery_piatti.jpg", :class => "gallery__img", :alt => "Assaporami - Selezione di piatti" %>
       </div>
     </div>
 
