--- a/source/layouts/_footer_bottom.html.erb
+++ b/source/layouts/_footer_bottom.html.erb
@@ -31,7 +31,7 @@
       <div class="col-12 col-md-4 col-lg-4 col-xl-4 d-flex justify-content-center footer-copyright">
         <div class="d-flex align-items-center">
             <i class="far fa-copyright"></i>
-            <p>2019 - Assaporami Srl | Credit: <%= link_to "Regis Weill", "http://www.weill.it", id: "credit_link" %></p>
+            <p>2016-2019 - Assaporami Srl | Credit: <%= link_to "Regis Weill", "http://www.weill.it", id: "credit_link" %></p>
         </div>
       </div>
     </div>
