--- a/source/layouts/_footer_top.html.erb
+++ b/source/layouts/_footer_top.html.erb
@@ -18,7 +18,7 @@
 
                 <ul class="list-unstyled">
                   <li id="li-mb"><%= link_to "Servizi", "/services.html" %></li>
-                  <li id="li-mb"><%= link_to "Pubblicazioni", "/editorials.html" %></li>
+                  <li id="li-mb"><%= link_to "Cibo", "/cibo.html" %></li>
                 </ul>
             </div>
           </div>
