--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -23,7 +23,7 @@
             <%= link_to "Servizi", "/services.html", class: "nav-link", id: "nav-color" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Cibo", "/services.html", class: "nav-link", id: "nav-color" %>
+            <%= link_to "Cibo", "/cibo.html", class: "nav-link", id: "nav-color" %>
           </li>
           <li class="nav-item">
             <%= link_to "Aziende", "/services.html", class: "nav-link", id: "nav-color" %>
